task  3 file update

--- a/JavaScript/Task3/task3.html
+++ b/JavaScript/Task3/task3.html
@@ -12,15 +12,15 @@
 
 <body>
     <div class="contner">
-        <!-- <div id="operation">
+        <div id="operation">
             <button id="plus">+</button>
             <div id="count"></div>
             <button id="minus">-</button>
         </div>
         <div>
             <button id="reset">reset</button>
-        </div> -->
-        <div class="buttonHolder">
+        </div>
+        <!-- <div class="buttonHolder">
             <button id="hisBtn">History</button>
             <button id="visBtn">Vision</button>
             <button id="golBtn">Golas</button>
@@ -45,7 +45,7 @@
                     and challenging goals, or they can be smaller and more personal. It all depends on what you want to
                     achieve.</p>
             </div>
-        </div>
+        </div> -->
     </div>
 
 </body>
