--- a/HTML/Mihir portfolio/MyPortfolio.html
+++ b/HTML/Mihir portfolio/MyPortfolio.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    
+
     <div class="mainContener" id="home">
         <div class="navBar">
             <div class="name">MIHIR.</div>
@@ -52,27 +52,27 @@
         <div class="socialDiv">
             <ul>
                 <li>
-                    <div class="icon">
+                    <div class="icon facebook">
                         <a><i class="fa fa-facebook" aria-hidden="true"></i></a>
                     </div>
                 </li>
                 <li>
-                    <div class="icon">
+                    <div class="icon twitter">
                         <a><i class="fa fa-twitter" aria-hidden="true"></i> </a>
                     </div>
                 </li>
                 <li>
-                    <div class="icon">
+                    <div class="icon github">
                         <a><i class="fa fa-github" aria-hidden="true"></i> </a>
                     </div>
                 </li>
                 <li>
-                    <div class="icon">
+                    <div class="icon linked">
                         <a><i class="fa fa-linkedin-square" aria-hidden="true"></i> </a>
                     </div>
                 </li>
                 <li>
-                    <div class="icon">
+                    <div class="icon insta">
                         <a><i class="fa fa-instagram" aria-hidden="true"></i> </a>
                     </div>
                 </li>
@@ -80,8 +80,7 @@
         </div>
         <div class="scrollDown">
             <a href="#aboutId">
-                <i class="fa fa-arrow-down" aria-hidden="true"></i></a>
-            <span>SCROLL DOWN</span>
+                <i class="fa fa-arrow-down" aria-hidden="true"> SCROLL DOWN</i></a>
             </a>
         </div>
         <hr>
@@ -135,7 +134,8 @@
                 </table>
 
                 <div class="downloadResume">
-                    <a><span>DOWNLOAD RESUME</span></a>
+                    <a href="./Image/Mihir's Resume Experience.pdf" download="Mihr Resume"><span>DOWNLOAD
+                            RESUME</span></a>
                 </div>
 
             </div>
@@ -151,7 +151,7 @@
         <div class="skillContner">
             <div class="skillBox">
                 <div class="single-chart">
-                    <svg viewBox="0 0 36 36" class="circular-chart orange">
+                    <svg viewBox="0 0 36 36" class="circular-chart orange dsa">
                         <path class="circle-bg" d="M18 2.0845
                           a 15.9155 15.9155 0 0 1 0 31.831
                           a 15.9155 15.9155 0 0 1 0 -31.831" />
@@ -163,37 +163,37 @@
                 </div>
                 <h3>DSA</h3>
             </div>
-            <div class="skillBox">
+            <div class="skillBox ">
                 <div class="single-chart">
-                    <svg viewBox="0 0 36 36" class="circular-chart orange">
+                    <svg viewBox="0 0 36 36" class="circular-chart orange backend">
                         <path class="circle-bg" d="M18 2.0845
                           a 15.9155 15.9155 0 0 1 0 31.831
                           a 15.9155 15.9155 0 0 1 0 -31.831" />
                         <path class="circle" stroke-dasharray="50, 100" d="M18 2.0845
                           a 15.9155 15.9155 0 0 1 0 31.831
                           a 15.9155 15.9155 0 0 1 0 -31.831" />
-                        <text x="18" y="20.35" class="percentage">50%</text>
+                        <text x="18" y="20.35" class="percentage ">50%</text>
                     </svg>
                 </div>
                 <h3>Back-end Development</h3>
             </div>
-            <div class="skillBox">
+            <div class="skillBox ">
                 <div class="single-chart">
-                    <svg viewBox="0 0 36 36" class="circular-chart orange">
+                    <svg viewBox="0 0 36 36" class="circular-chart orange frontend">
                         <path class="circle-bg" d="M18 2.0845
                           a 15.9155 15.9155 0 0 1 0 31.831
                           a 15.9155 15.9155 0 0 1 0 -31.831" />
                         <path class="circle" stroke-dasharray="40, 100" d="M18 2.0845
                           a 15.9155 15.9155 0 0 1 0 31.831
                           a 15.9155 15.9155 0 0 1 0 -31.831" />
-                        <text x="18" y="20.35" class="percentage">40%</text>
+                        <text x="18" y="20.35" class="percentage ">40%</text>
                     </svg>
                 </div>
                 <h3>Front-end Development</h3>
             </div>
-            <div class="skillBox">
+            <div class="skillBox ">
                 <div class="single-chart">
-                    <svg viewBox="0 0 36 36" class="circular-chart orange">
+                    <svg viewBox="0 0 36 36" class="circular-chart orange mobileend">
                         <path class="circle-bg" d="M18 2.0845
                           a 15.9155 15.9155 0 0 1 0 31.831
                           a 15.9155 15.9155 0 0 1 0 -31.831" />
@@ -329,8 +329,8 @@
 
                     <h5>Contact on phone
                     </h5>
-                    <p>9009540910</p>
-                    <p>6260371538</p>
+                    <p class="mobileNumber">9009540910</p>
+                    <p class="mobileNumber">6260371538</p>
                 </div>
                 <div class="subDivContentInfo">
                     <a class="iconTele">
@@ -338,8 +338,8 @@
                     </a>
                     <h5>Contact on mail
                     </h5>
-                    <p>memihirbhawsar@gmail.com</p>
-                    <p>mebhawsar@gmail.com</p>
+                    <p class="email">memihirbhawsar@gmail.com</p>
+                    <p class="email">mebhawsar@gmail.com</p>
                 </div>
                 <div class="subDivContentInfo">
                     <a class="iconTele">
@@ -355,15 +355,16 @@
 
                 <form>
                     <label for="">Name</label><br>
-                    <input type="text" placeholder="Enter your name.." /><br>
+                    <input type="text" class="nameInput" placeholder="Enter your name.." /><br>
                     <label for="">Email</label><br>
-                    <input type="email" placeholder="Enter your email.." /><br>
+                    <input type="email" class="emailInput" placeholder="Enter your email.." /><br>
                     <label for="">Subject</label><br>
-                    <input type="text" placeholder="Enter your Subject.." /><br>
+                    <input type="text" class="subInput" placeholder="Enter your Subject.." /><br>
                     <label for="">Message</label><br>
-                    <input type="text" placeholder="Enter your Message.." style="height: 100px;" /><br>
+                    <input type="text" class="messageInput" placeholder="Enter your Message.."
+                        style="height: 100px;" /><br>
                     <div class="sendMail">
-                        <a><span>SEND MAIL</span></a>
+                        <a><span class="sendMailBtn">SEND MAIL</span></a>
                     </div>
 
 
@@ -412,5 +413,6 @@
         <i class="fa fa-angle-up" aria-hidden="true"></i>
     </a>
 </body>
+<script src="./JS/Portfolio.js"></script>
 
 </html>
